# bakery

./: .gitignore  .travis.yaml  .travis.yml  AUTHORS  Makefile  Pipfile  README.md  prepare_files.py  pyproject.toml  requirements.txt  setup.py  start_backmapping.py
doc/: Makefile  commands.rst  conf.py  id_rsa_bakery.enc  index.rst  method.rst  settings.rst  workflow.rst  xml_structure.rst
doc/_static/: achs_jctcce12_5549.bib
examples/dodecane/: clean.sh  dodecane_settings.xml  exclusion_hyb_topol.list  hyb_conf.gro  hyb_topol.top  params  run_simulation.pbs
examples/melamine/: cg_conf_500.gro  cg_topol.top  hyb_conf.gro  hyb_topol.top  map.xml  melf_settings.xml  params
examples/pe/: exclusion_hyb_topol.list  hyb_conf.gro  hyb_topol.top  map.xml  params  pe_config.par  pe_settings.xml  table_A_A.xvg  table_A_B.xvg  table_B_B.xvg  table_a1.xvg  table_a2.xvg  table_b1.xvg  topol.top
examples/pe4/: README  exclusion_hyb_topol.list  hyb_conf.gro  hyb_topol.top  params  pe4_settings.xml  pe_config_4.par  table.xvg  table_A_A.xvg  table_A_B.xvg  table_a1.xvg  topol.top
examples/pe_10/: README.md  (+14 more)
src/: __init__.py  app_args.py  backmapping.py  convert_lammps2gromacs.py  files_io.py  gromacs.py  gromacs_topology.py  lammps.py  prepare_files.py  prepare_files2.py  reorder_topology.py  start_backmapping.py  start_backmapping2.py  start_simulation.py  structures.py  tools.py  tools_backmapping.py  tools_sim.py  topology_helper.py
tests/: files_io_test.py  hyb_topol.top  run_tests.sh
tools/: clean.sh  create_mapping.py  tab_lammps2espp.py  tab_lammps2gromacs.py
(+792 files in other folders)
